# dotfiles

./: README.rst  config.yaml  pyproject.toml  zshrc
dotfiles/config/bspwm/: bspwmrc
dotfiles/config/kitty/: kitty.conf
dotfiles/config/nitrogen/: nitrogen.cfg
dotfiles/config/nvim/: init.vim
dotfiles/config/picom/: picom.conf
dotfiles/config/polybar/docky/: colors.ini  config.ini
dotfiles/config/polybar/forest/: config.ini
dotfiles/config/polybar/hack/: config.ini
dotfiles/config/polybar/shapes/: bars.ini  config.ini  modules.ini
dotfiles/config/sxhkd/: sxhkdrc
dotfiles/dotfiles/: zshrc
