[tool.poetry]
name = ".dotfiles"
version = "0.1.0"
description = "My dotfiles"
authors = ["andy <andy.development@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python_version = "^0.0.2"
requests = "^2.26.0"
packaging = "^21.3"
python-magic = "^0.4.24"
"ruamel.yaml" = "^0.17.17"
docopt = "^0.6.2"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
